--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,10 @@
                 <%- include('partials/lecture8') %>
             <% } else if (currentLecture === 'lecture9') { %>
                 <%- include('partials/lecture9') %>
+            <% }else if (currentLecture === 'lecture10') { %>
+                <%- include('partials/lecture10') %>
             <% } %>
+            
         </div>
     </div>
 
